Support Mac's command keys

--- a/files/cf_template.html
+++ b/files/cf_template.html
@@ -20,7 +20,7 @@
     };
 
     var assessKey = function(event) {
-      if (event.ctrlKey || event.altKey
+      if (event.ctrlKey || event.altKey || event.metaKey
       || document.activeElement.nodeName === "INPUT") {
         return;
       }
