Disable open HTML option when the user chooses not to export it

--- a/files/cf_template.html
+++ b/files/cf_template.html
@@ -171,7 +171,7 @@
 
     var resetCheckboxes = function () {
       document.getElementById("matchRates101").checked = false;
-      ocument.getElementById('matchRates101').removeAttribute("disabled");
+      document.getElementById('matchRates101').removeAttribute("disabled");
       document.getElementById("matchRates100").checked = false;
       document.getElementById("lockedStatusLocked").checked = false;
     };
