--- a/files/cf_template.html
+++ b/files/cf_template.html
@@ -15,9 +15,11 @@
     document.fluxColor = false;
     document.hiddenRows = {};
     document.predefinedFilterConfig = {
+      // row, col, string
       matchRates101: [5, 4, '0-100'],
       matchRates100: [5, 4, '0-99'],
-      lockedStatusLocked: [4, 3, 'Yes'],
+      lockedStatusLocked: [1, 5, 'No'],
+      sameAsSource: [1, 6, 'No'],
     };
 
     var assessKey = function(event) {
@@ -41,6 +43,10 @@
         case 'L'.charCodeAt(0):
           toggleCheckboxByKey("lockedStatusLocked");
           predefinedFilter("lockedStatusLocked", 5);
+          break;
+        case 'A'.charCodeAt(0):
+          toggleCheckboxByKey("sameAsSource");
+          predefinedFilter("sameAsSource", 6);
           break;
         case 'F'.charCodeAt(0):
           toggleCheckboxByKey("fluxCheckbox");
@@ -174,16 +180,17 @@
       document.getElementById('matchRates101').removeAttribute("disabled");
       document.getElementById("matchRates100").checked = false;
       document.getElementById("lockedStatusLocked").checked = false;
+      document.getElementById("sameAsSource").checked = false;
     };
 
-    var predefinedFilter = function (id, column) {
+    var predefinedFilter = function (id) {
       var cb = document.getElementById(id);
       if (cb.disabled) return;
-      var predifinedList = document.predefinedFilterConfig[id];
+      var [row, col, string] = document.predefinedFilterConfig[id];
       var filterTable = document.getElementById("filterTable");
-      var cellToFill = filterTable.children[1].children[predifinedList[0]].children[column].children[0];
-      cellToFill.value = cb.checked ? predifinedList[2]: '';
-      filterSegments(cellToFill, functionsList[predifinedList[1]]);
+      var cellToFill = filterTable.children[1].children[row].children[col].children[0];
+      cellToFill.value = cb.checked ? string: '';
+      filterSegments(cellToFill, functionsList[row - 1]);
       var allTr = document.querySelectorAll('tr');
       updateSegmentVisibility(allTr);
     };
@@ -248,13 +255,18 @@
 
     <div>
       Exclude
-      <input type="checkbox" id="matchRates101" onclick="predefinedFilter(this.id, 4)" /> 10<u>1</u>+%
-      <input type="checkbox" id="matchRates100" onclick="predefinedFilter(this.id, 4)" onchange="disable101When100()" /> 10<u>0</u>+%
+      <input type="checkbox" id="matchRates101" onclick="predefinedFilter(this.id)" /> 10<u>1</u>+%
+      <input type="checkbox" id="matchRates100" onclick="predefinedFilter(this.id)" onchange="disable101When100()" /> 10<u>0</u>+%
     </div>
 
     <div>
       Exclude
-      <input type="checkbox" id="lockedStatusLocked" onclick="predefinedFilter(this.id, 5)" /> <u>l</u>ocked segments
+      <input type="checkbox" id="lockedStatusLocked" onclick="predefinedFilter(this.id)" /> <u>l</u>ocked segments
+    </div>
+
+    <div>
+      Exclude
+      <input type="checkbox" id="sameAsSource" onclick="predefinedFilter(this.id)" /> s<u>a</u>me as source
     </div>
 
     <div>
