Improve file format for function check result

--- a/files/cf_template_terms.html
+++ b/files/cf_template_terms.html
@@ -9,6 +9,7 @@
       table { border-collapse: collapse; table-layout: fixed; width: 100%; }
       td { word-wrap: break-word; }
       th { background: silver; }
+      #filterTable { width: 75%; }
     </style>
 
   <script type="text/javascript">
@@ -274,7 +275,7 @@
       <li>@list_metadata</li>
     </ul>
 
-    <table id="filterTable" style="width:75%">
+    <table id="filterTable">
       <caption>Filters (Include, Exclude, Include Regex, Exclude Regex, Number Range)</caption>
       <tbody>
         <tr>
