--- a/files/cf_template_functions.html
+++ b/files/cf_template_functions.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Check Forbidden results</title>
     <style type="text/css">
       button, div { margin-bottom: 5px; margin-top: 5px; }
