--- a/files/cf_template_terms.html
+++ b/files/cf_template_terms.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>Check Forbidden results</title>
-    <style type="text/css">
+    <style>
       button, div { margin-bottom: 5px; margin-top: 5px; }
-      caption { font-size: 125%; font-weight: bold; padding: 10px 0px 10px 0px;}
+      caption { font-size: 125%; font-weight: bold; padding: 10px 0 10px 0;}
       tr input, td input { width: 100%; }
-      table { border-collapse: collapse; table-layout: fixed; width: 100%; }
-      td { word-wrap: break-word; }
-      th { background: silver; }
+      table { border: 1px solid black; border-collapse: collapse; table-layout: fixed; width: 100%; }
+      td { border: 1px solid black; word-wrap: break-word; }
+      th { background: silver; border: 1px solid black; }
       #filterTable { width: 75%; }
     </style>
 
-  <script type="text/javascript">
+  <script>
     document.fluxColor = false;
     document.hiddenRows = {};
     document.predefinedFilterConfig = {
